--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -3,7 +3,7 @@
 <div class="container mt-5 ">
   <h1 class="titulo" >Mis compras</h1>
 <div >
-  <ngb-accordion #acc="ngbAccordion" class="orderTable"  style="margin-bottom: 20px; !important"  *ngFor="let order of orders" >
+  <ngb-accordion #acc="ngbAccordion" class="orderTable"   *ngFor="let order of orders" >
     <ngb-panel title="Simple" >
       <ng-template ngbPanelHeader >
         <!-- <div class="d-flex justify-content-between"> -->
