--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -35,7 +35,7 @@
             <p  class="text-product">${{ product.price }}</p>
           </div>
           <div class="col-md-4 align-self-center d-flex justify-content-center btn-contenedor">
-            <button class="btn btn-custom btn-md " type="button" href="/productos">Comprar de nuevo</button>
+            <button class="btn btn-custom btn-md " type="button" (click)="goToDetail(order)">Detalles de Facturacion</button> 
             
           </div>
         
