Se agrego la funcion para el boton agregar al carrito, se agrego un contador de articulos al menu de carrito

--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
       Productos
     </button>
     <button mat-button *ngIf="user" (click)="handleMenuItemClick('carrito')">
-      Carrito
+      Carrito <span *ngIf="contador" matBadge="{{contador}}" matBadgeOverlap="false"></span>
     </button>
     <button mat-button *ngIf="user" (click)="handleMenuItemClick('misPedidos')">
       Mis Pedidos
