--- a/src/app/pages/eager/products/products.component.html
+++ b/src/app/pages/eager/products/products.component.html
@@ -1,32 +1,34 @@
 <page-header text="Productos" icon="shopping_cart"></page-header>
-<div fxLayout="row" fxLayout.sm="column">
-  <div fxLayout="column" fxFlex="5">
-  </div>
-  <div fxLayout="column" fxFlex="10">
-    <h2>Categorías</h2>
-    <mat-list role="list">
-      <mat-list-item role="listitem">Categoría 1</mat-list-item>
-      <mat-list-item role="listitem">Categoría 2</mat-list-item>
-      <mat-list-item role="listitem">Categoría 3</mat-list-item>
-    </mat-list>
-  </div>
-  <div fxLayout.sm="column" fxFlex>
-    <mat-card pageContainer>
-      <mat-card-content>
-        <div fxLayout="row">
+<div class="mt-3">
+  <div class="row">
+    <div class="col-lg-1 col-md-2 col-sm-1">
+        <mat-card>
+          <button mat-button [matMenuTriggerFor]="menu">Categorías</button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>Calzado</button>
+            <button mat-menu-item>Indumentaria</button>
+            <button mat-menu-item>Accesorios</button>
+          </mat-menu>
+        </mat-card>
+    </div>
+    <div class="col-lg-11 col-md-10 col-sm-1">
+      <div class="gallery">
           <mat-card *ngFor="let product of products">
-            <img mat-card-image src="https://images.ssstatic.com/pelota-de-futbol-antiestres-5920384n0-19082912.jpg" class="w-auto" alt="T-Shirt">
-            <mat-card-title> {{ product.name }} </mat-card-title>
-            <mat-card-subtitle> {{ product.description }}</mat-card-subtitle>
-            <mat-card-subtitle> {{ product.price }}</mat-card-subtitle>
-            <mat-card-content> </mat-card-content>
             <div fxLayoutAlign="center">
-              <button mat-flat-button color="primary">Agregar al Carrito</button>
-            </div>            
-          </mat-card>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+              <img mat-card-image [src]="product.imageUrl " alt="Image" >
+            </div>        
+            <mat-card-header>
+              <mat-card-title class="title-small">{{ product.name }}</mat-card-title>
+              <mat-card-subtitle class="price"> {{ product.price | currency: 'USD'}}</mat-card-subtitle>
+            </mat-card-header> 
+            <!-- <a routerLink="/products/{{product.id}}"></a>        -->
+            <mat-card-actions fxLayoutAlign="center">
+              <button (click)="agregarProductoAlCarrito(product)" mat-flat-button color="primary">Agregar al Carrito</button>
+            </mat-card-actions>
+          </mat-card>    
+      </div>       
+    </div>
 </div>
+</div>
+
 
