--- a/src/app/pages/lazy/detallePedido/container/detallePedido.component.html
+++ b/src/app/pages/lazy/detallePedido/container/detallePedido.component.html
@@ -1,61 +1,107 @@
 <page-header text="Detalle pedido" icon="view_list"></page-header>
 
-
-<div class=" container mt-5 ">
-  <h1 class="titulo" >Pedido realizado con éxito</h1>
-  <div class="d-flex ">
-<div class="row">
-
-  <div class="col-md-7">
-    <div class="card ">
-      <h2 class="card-header font-weight-medium">Detalle del pedido Nro° {{ order.orderId | slice:-6  }}</h2>
-      <div class="card-body pb-0" *ngIf="order">
-          <!-- En el div de abajo iría la iteracion de los productos de la orden -->
-        <div  *ngFor="let product of order.products; let lastItem = last;" class="producto-individual mb-3" >
-        <div class="row contenedor-productos">
-          <div  class="col-md-3 d-flex justify-content-center contenedor-img-detalle">
-            <img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg">
+<div class="container mt-5" *ngIf="order">
+  <h1 class="titulo">Pedido realizado con éxito</h1>
+  <div class="d-flex">
+    <div class="row">
+      <div class="col-md-7">
+        <div class="card">
+          <h2 class="card-header font-weight-medium">
+            Detalle del pedido Nro° {{ order?.orderId | slice: -6 }}
+          </h2>
+          <div class="card-body pb-0">
+            <!-- En el div de abajo iría la iteracion de los productos de la orden -->
+            <div
+              *ngFor="let product of order.products; let lastItem = last"
+              class="producto-individual mb-3"
+            >
+              <div class="row contenedor-productos">
+                <div
+                  class="
+                    col-md-3
+                    d-flex
+                    justify-content-center
+                    contenedor-img-detalle
+                  "
+                >
+                  <img
+                    class="img-fluid img-responsive rounded product-image"
+                    [src]="product.imageUrl"
+                  />
+                </div>
+                <div
+                  class="
+                    col-md-7
+                    d-flex
+                    flex-column
+                    align-content-between
+                    textos
+                  "
+                >
+                  <h3 class="font-weight-bold title-product">
+                    {{ product.name }}
+                  </h3>
+                  <p class="text-product">{{ product.category }}</p>
+                </div>
+                <div
+                  class="
+                    col-md-2
+                    d-flex
+                    flex-column
+                    justify-content-start
+                    contenedor-precio
+                    textos
+                  "
+                >
+                  <h3 class="font-weight-bold title-product ml-auto">Precio</h3>
+                  <p class="text-product ml-auto">
+                    {{ product.price | currency }}
+                  </p>
+                </div>
+              </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row mt-3">
+              <div class="col-md-5 d-flex flex-column textos">
+                <h3 class="font-weight-bold title-product">TOTAL</h3>
+              </div>
+              <div
+                class="col-md-7 d-flex justify-content-end textos total-price"
+              >
+                <h3 class="font-weight-bold title-product">
+                  {{ calculateTotalPrice(order.products) | currency }}
+                </h3>
+              </div>
+            </div>
           </div>
-          <div class="col-md-7 d-flex flex-column align-content-between textos">
-            <h3 class="font-weight-bold title-product">{{product.name}}</h3>
-            <p class="text-product">Insertar Categoria!</p>
-          </div>
-          <div class="col-md-2 d-flex flex-column  justify-content-start contenedor-precio textos">
-            <h3 class="font-weight-bold title-product  ml-auto  ">Precio</h3>
-            <p class="text-product ml-auto">$100</p>
-          
-        </div>
         </div>
       </div>
-      <mat-divider></mat-divider>
-      <div class="row mt-3">
-        <div class="col-md-5 d-flex flex-column textos">
-          <h3 class="font-weight-bold title-product">TOTAL</h3>
+
+      <div class="col-md-5">
+        <div class="card pb-3">
+          <h2 class="card-header font-weight-medium">Datos de facturación</h2>
+          <div class="card-body pb-0">
+            <h3>
+              <span class="font-weight-bold">Pedido entregado a</span>
+              {{ order.user.firstName }} {{ order.user.lastName }}
+            </h3>
+            <h3 class="title-product">
+              <span class="font-weight-bold">Fecha del pedido:</span>
+              {{ order.date | date: "dd/MM/YYYY" }}
+            </h3>
+
+            <h3 class="title-product">
+              <span class="font-weight-bold">Dirección:</span>
+              {{ order.user.address.street }} {{ order.user.address.number }},
+              {{ order.user.address.city }}. {{ order.user.address.province }}
+            </h3>
+            <h3 class="title-product">
+              <span class="font-weight-bold">Mail de contacto:</span>
+              {{ order.user.email }}
+            </h3>
+          </div>
         </div>
-        <div class="col-md-7 d-flex  justify-content-end textos total-price">
-          <h3 class="font-weight-bold title-product">${{ calculateTotalPrice(order.products) }}</h3>
-        </div>
-      </div>
       </div>
     </div>
   </div>
-  
- 
-<div class="col-md-5">
-  <div class="card pb-3">
-    <h2 class="card-header font-weight-medium">Datos de facturación</h2>
-    <div class="card-body pb-0">
-      <h3><span class="font-weight-bold">Pedido entregado a</span> {{order.user.firstName}} {{order.user.lastName}}</h3>
-        <h3 class="title-product"><span class="font-weight-bold">Fecha del pedido:</span> {{ order.date | date: 'dd/MM/YYYY' }}</h3>
-     
-        <h3 class="title-product"><span class="font-weight-bold ">Dirección:</span> {{order.user.address.street}} {{order.user.address.number}}, {{order.user.address.city}}. {{order.user.address.province}}</h3>
-        <h3 class="title-product"><span class="font-weight-bold ">Mail de contacto:</span> {{order.user.email}}</h3>
-     
-    </div>
-  </div>
 </div>
-</div>
-</div>
-
-</div>
-
