--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -10,19 +10,60 @@
           <th scope="col">Categoria</th>
           <th scope="col">Precio</th>
           <th scope="col"></th>
-    
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let product of products" >
-          <td><img src="{{product.imageUrl}}" class="img-producto border border-primary">  {{product.name}}</td>
-          <td><mat-icon class="text-primary btn-info-description" data-toggle="tooltip" data-placement="left" title="{{product.description}}" >info</mat-icon></td>
-          <td>{{product.category.description}} </td>
-          <td>$ {{product.price}} ARS</td>
-          <td><button (click)="eliminarProductoDelCarrito(product)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
+        <tr *ngFor="let product of products">
+          <td>
+            <img
+              src="{{ product.imageUrl }}"
+              class="img-producto border border-primary"
+            />
+            {{ product.name }}
+          </td>
+          <td>
+            <mat-icon
+              class="text-primary btn-info-description"
+              [matTooltip]="product.description"
+              matTooltipPosition="below"
+              matTooltipHideDelay="0"
+              matTooltipClass="tooltip-red"
+              >info</mat-icon
+            >
+          </td>
+          <td>{{ product.category }}</td>
+          <td>$ {{ product.price }} ARS</td>
+          <td>
+            <button
+              (click)="eliminarProductoDelCarrito(product)"
+              _ngcontent-yqx-c233=""
+              mat-icon-button=""
+              color="warn"
+              class="
+                mat-focus-indicator mat-icon-button mat-button-base mat-warn
+              "
+            >
+              <span class="mat-button-wrapper"
+                ><mat-icon
+                  _ngcontent-yqx-c233=""
+                  role="img"
+                  class="mat-icon notranslate material-icons mat-icon-no-color"
+                  aria-hidden="true"
+                  data-mat-icon-type="font"
+                  >delete</mat-icon
+                ></span
+              ><span
+                matripple=""
+                class="mat-ripple mat-button-ripple mat-button-ripple-round"
+              ></span
+              ><span class="mat-button-focus-overlay"></span>
+            </button>
+          </td>
         </tr>
         <tr *ngIf="products.length == 0">
-          <td class="text-danger">Usted no ha agregado productos a su carrito</td>
+          <td class="text-danger">
+            Usted no ha agregado productos a su carrito
+          </td>
           <td></td>
           <td></td>
           <td></td>
@@ -33,9 +74,8 @@
           <td></td>
           <td></td>
           <td>PRECIO TOTAL</td>
-          <td>$ {{precioTotalCarrito}} ARS</td>
+          <td>$ {{ precioTotalCarrito }} ARS</td>
           <td></td>
-
         </tr>
       </tbody>
     </table>
@@ -44,83 +84,201 @@
     </div> -->
   </mat-tab>
   <mat-tab label="Mis datos de facturación">
-   
     <div class="page-content page-container" id="page-content">
       <div class="padding">
-          <div class="row d-flex justify-content-center">
-              <div class="col-xl-12 col-md-12">
-                  <div class="card user-card-full">
-                      <div class="row m-l-0 m-r-0">
-                          <div class="col-sm-4 bg-c-lite-green user-profile">
-                              <div class="card-block text-center text-white">
-                                  <div class=""> <img src="https://i.pinimg.com/originals/74/ab/48/74ab48240e34df5e05a398e997a42b0e.png" class="img-radius mt-5 w-25" alt="User-Profile-Image"> </div>
-                                  <h6 class="f-w-600">Hembo Tingor</h6>
-                                  <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
-                              </div>
-                          </div>
-                          <div class="col-sm-8">
-                              <div class="card-block">
-                                  <h6 class="m-b-20 p-b-5 b-b-default f-w-600 info-title">Mis datos personales</h6>
-                                  <div class="row">
-                                      <div class="col-sm-6">
-                                          <p class="m-b-10 f-w-600">Email</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{user?.email}}</h6>
-                                      </div>
-                                      <div class="col-sm-6">
-                                          <p class="m-b-10 f-w-600">Nombre completo</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{user?.firstName}} {{user?.lastName}}</h6>
-                                      </div>
-                                  </div>
-                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Domicilio de entrega</h6>
-                                  <div class="row">
-                                      <div class="col-sm-6">
-                                          <p class="m-b-10 f-w-600">Dirección</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{user?.address.street}} {{user?.address.number}}</h6>
-                                      </div>
-                                      <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Ubicación</p>
-                                        <h6 class="text-muted f-w-400 info-user">{{user?.address.city}}, {{user?.address.province}}, {{user?.address.country}}</h6>
-                                    </div>
-                                  </div>
-                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Datos de la compra</h6>
-                                  <div class="row">
-                                      <div class="col-sm-6">
-                                          <p class="m-b-10 f-w-600">Precio total de la compra</p>
-                                          <h6 class="text-muted f-w-400 info-user">$ {{precioTotalCarrito}} ARS</h6>
-                                      </div>
-                                  </div>
-                                  
-                                  <ul class="social-link list-unstyled m-t-40 m-b-10">
-                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
-                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
-                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
+        <div class="row d-flex justify-content-center">
+          <div class="col-xl-12 col-md-12">
+            <div class="card user-card-full">
+              <div class="row m-l-0 m-r-0">
+                <div class="col-sm-4 bg-c-lite-green user-profile">
+                  <div class="card-block text-center text-white">
+                    <div class="">
+                      <img
+                        src="https://i.pinimg.com/originals/74/ab/48/74ab48240e34df5e05a398e997a42b0e.png"
+                        class="img-radius mt-5 w-25"
+                        alt="User-Profile-Image"
+                      />
+                    </div>
+                    <h6 class="f-w-600">Hembo Tingor</h6>
+                    <p>Web Designer</p>
+                    <i
+                      class="
+                        mdi mdi-square-edit-outline
+                        feather
+                        icon-edit
+                        m-t-10
+                        f-16
+                      "
+                    ></i>
                   </div>
-              </div>
-          </div>
-      </div>
-  </div>
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-block">
+                    <h6 class="m-b-20 p-b-5 b-b-default f-w-600 info-title">
+                      Mis datos personales
+                    </h6>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <p class="m-b-10 f-w-600">Email</p>
+                        <h6 class="text-muted f-w-400 info-user">
+                          {{ user?.email }}
+                        </h6>
+                      </div>
+                      <div class="col-sm-6">
+                        <p class="m-b-10 f-w-600">Nombre completo</p>
+                        <h6 class="text-muted f-w-400 info-user">
+                          {{ user?.firstName }} {{ user?.lastName }}
+                        </h6>
+                      </div>
+                    </div>
+                    <h6
+                      class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title"
+                    >
+                      Domicilio de entrega
+                    </h6>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <p class="m-b-10 f-w-600">Dirección</p>
+                        <h6 class="text-muted f-w-400 info-user">
+                          {{ user?.address.street }} {{ user?.address.number }}
+                        </h6>
+                      </div>
+                      <div class="col-sm-6">
+                        <p class="m-b-10 f-w-600">Ubicación</p>
+                        <h6 class="text-muted f-w-400 info-user">
+                          {{ user?.address.city }},
+                          {{ user?.address.province }},
+                          {{ user?.address.country }}
+                        </h6>
+                      </div>
+                    </div>
+                    <h6
+                      class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title"
+                    >
+                      Datos de la compra
+                    </h6>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <p class="m-b-10 f-w-600">Precio total de la compra</p>
+                        <h6 class="text-muted f-w-400 info-user">
+                          $ {{ precioTotalCarrito }} ARS
+                        </h6>
+                      </div>
+                    </div>
 
+                    <ul class="social-link list-unstyled m-t-40 m-b-10">
+                      <li>
+                        <a
+                          href="#!"
+                          data-toggle="tooltip"
+                          data-placement="bottom"
+                          title=""
+                          data-original-title="facebook"
+                          data-abc="true"
+                          ><i
+                            class="
+                              mdi mdi-facebook
+                              feather
+                              icon-facebook
+                              facebook
+                            "
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="#!"
+                          data-toggle="tooltip"
+                          data-placement="bottom"
+                          title=""
+                          data-original-title="twitter"
+                          data-abc="true"
+                          ><i
+                            class="mdi mdi-twitter feather icon-twitter twitter"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="#!"
+                          data-toggle="tooltip"
+                          data-placement="bottom"
+                          title=""
+                          data-original-title="instagram"
+                          data-abc="true"
+                          ><i
+                            class="
+                              mdi mdi-instagram
+                              feather
+                              icon-instagram
+                              instagram
+                            "
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </mat-tab>
 </mat-tab-group>
 
-<button *ngIf="productosEliminadosDelCarrito.length > 0" (click)="agregarUltimoProductoEliminado()" mat-raised-button color="primary" class="btn-restaurar-productos">Restaurar Último Producto Eliminado<mat-icon>cached icon</mat-icon></button>
+<button
+  *ngIf="productosEliminadosDelCarrito.length > 0"
+  (click)="agregarUltimoProductoEliminado()"
+  mat-raised-button
+  color="primary"
+  class="btn-restaurar-productos"
+>
+  Restaurar Último Producto Eliminado<mat-icon>cached icon</mat-icon>
+</button>
 
-<button (click)="MockGuardarProductosEnCarritoSession()" mat-raised-button color="" class="">RESTABLECER CARRITO PRUEBA - MOCK PROVISORIO<mat-icon>cached icon</mat-icon></button>
-<button (click)="agregarProductoAlCarritoMock()" mat-raised-button color="" class="m-lg-1">AGREGAR UN PRODUCTO  - MOCK PROVISORIO</button>
+<button
+  (click)="MockGuardarProductosEnCarritoSession()"
+  mat-raised-button
+  color=""
+  class=""
+>
+  RESTABLECER CARRITO PRUEBA - MOCK PROVISORIO<mat-icon>cached icon</mat-icon>
+</button>
+<button
+  (click)="agregarProductoAlCarritoMock()"
+  mat-raised-button
+  color=""
+  class="m-lg-1"
+>
+  AGREGAR UN PRODUCTO - MOCK PROVISORIO
+</button>
 
-
-<button *ngIf="products.length > 0" (click)="vaciarCarrito()" mat-raised-button color="primary" class="btn-vaciar-carrito">Vaciar Carrito<mat-icon>remove_shopping_cart</mat-icon></button>
-<button *ngIf="products.length > 0" (click)="confirmarCompra()" mat-raised-button color="primary" class="btn-confirmar-compra">Comprar<mat-icon>done_all</mat-icon></button>
-
+<button
+  *ngIf="products.length > 0"
+  (click)="vaciarCarrito()"
+  mat-raised-button
+  color="primary"
+  class="btn-vaciar-carrito"
+>
+  Vaciar Carrito<mat-icon>remove_shopping_cart</mat-icon>
+</button>
+<button
+  *ngIf="products.length > 0"
+  (click)="confirmarCompra()"
+  mat-raised-button
+  color="primary"
+  class="btn-confirmar-compra"
+>
+  Comprar<mat-icon>done_all</mat-icon>
+</button>
 
 <script>
   $(function () {
- 
- $('[data-toggle="tooltip"]').tooltip()
-
-})
+    $('[data-toggle="tooltip"]').tooltip();
+  });
 </script>
