--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -1,58 +1,105 @@
 <page-header text="Mis Pedidos" icon="view_list"></page-header>
 
-<div class="container mt-5 ">
-  <h1 class="titulo" >Mis compras</h1>
-<div >
-  <ngb-accordion #acc="ngbAccordion" class="orderTable"   *ngFor="let order of orders" >
-    <ngb-panel title="Simple" >
-      <ng-template ngbPanelHeader >
-        <!-- <div class="d-flex justify-content-between"> -->
-        <div class="contentHeading d-flex  justify-content-between flex-wrap">
-          <h4 class="m-1"><span class="font-weight-bold">PEDIDO N°</span> {{ order.orderId | slice:-6  }}</h4>
-          <h4 class="m-1"><span class="font-weight-bold">PEDIDO REALIZADO EL {{ order.date | date: 'dd/MM/YYYY' }}</span></h4>
-          <h4 class="m-1"><span class="font-weight-bold">TOTAL:</span> ${{ calculateTotalPrice(order.products) }}</h4>
-        <!-- </div> -->
-          <!-- <div class="d-flex justify-content-end"> -->
-            <button ngbPanelToggle class="btn p-0 btn-link verDetalle justify-content-end">VER DETALLE&nbsp; &nbsp;<i class="fas fa-angle-down"></i></button>
-          <!-- </div> -->
-        </div>
+<div class="container mt-5">
+  <h1 class="titulo">Mis compras</h1>
+  <div>
+    <ngb-accordion
+      #acc="ngbAccordion"
+      class="orderTable"
+      *ngFor="let order of orders"
+    >
+      <ngb-panel title="Simple">
+        <ng-template ngbPanelHeader>
+          <!-- <div class="d-flex justify-content-between"> -->
+          <div class="contentHeading d-flex justify-content-between flex-wrap">
+            <h4 class="m-1">
+              <span class="font-weight-bold">PEDIDO N°</span>
+              {{ order.orderId | slice: -6 }}
+            </h4>
+            <h4 class="m-1">
+              <span class="font-weight-bold"
+                >PEDIDO REALIZADO EL {{ order.date | date: "dd/MM/YYYY" }}</span
+              >
+            </h4>
+            <h4 class="m-1">
+              <span class="font-weight-bold">TOTAL:</span> ${{
+                calculateTotalPrice(order.products)
+              }}
+            </h4>
+            <!-- </div> -->
+            <!-- <div class="d-flex justify-content-end"> -->
+            <button
+              ngbPanelToggle
+              class="btn p-0 btn-link verDetalle justify-content-end"
+            >
+              VER DETALLE&nbsp; &nbsp;<i class="fas fa-angle-down"></i>
+            </button>
+            <!-- </div> -->
+          </div>
+        </ng-template>
+        <ng-template ngbPanelContent>
+          <div *ngFor="let product of order.products; let lastItem = last">
+            <div class="row d-flex justify-content-between flex-row mb-3 mt-3">
+              <div
+                class="
+                  col-md-2
+                  d-flex
+                  justify-content-center
+                  contenedor-img-product
+                "
+              >
+                <img
+                  class="img-fluid img-responsive rounded product-image"
+                  src="https://i.imgur.com/HO8e9b8.jpg"
+                />
+              </div>
+              <div
+                class="
+                  col-md-3
+                  d-flex
+                  flex-column
+                  align-content-between
+                  justify-content-center
+                "
+              >
+                <h3 class="font-weight-bold title-product">
+                  {{ product.name }}
+                </h3>
+                <p class="text-product">{{ product.category }}</p>
+              </div>
 
-      </ng-template>
-      <ng-template ngbPanelContent>
-        <div *ngFor="let product of order.products ; let lastItem = last;">
-        <div class="row  d-flex  justify-content-between flex-row mb-3 mt-3">
-         
-          <div  class="col-md-2 d-flex justify-content-center contenedor-img-product">
-            <img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg">
+              <div class="col-md-3 align-self-center">
+                <h3 class="font-weight-bold text-product">PRECIO</h3>
+                <p class="text-product">${{ product.price }}</p>
+              </div>
+              <div
+                class="
+                  col-md-4
+                  align-self-center
+                  d-flex
+                  justify-content-center
+                  btn-contenedor
+                "
+              >
+                <button
+                  mat-raised-button
+                  color="primary"
+                  type="button"
+                  (click)="goToDetail(order)"
+                >
+                  Detalles de Facturacion
+                </button>
+              </div>
+            </div>
+            <mat-divider *ngIf="!lastItem"></mat-divider>
           </div>
-          <div class="col-md-3 d-flex flex-column align-content-between justify-content-center ">
-            <h3 class="font-weight-bold title-product">{{ product.name }}</h3>
-            <p class="text-product">{{ product.description }}</p>
-          </div>
-
-          <div class="col-md-3 align-self-center">
-            <h3 class="font-weight-bold text-product">PRECIO</h3>
-            <p  class="text-product">${{ product.price }}</p>
-          </div>
-          <div class="col-md-4 align-self-center d-flex justify-content-center btn-contenedor">
-            <button class="btn btn-custom btn-md " type="button" (click)="goToDetail(order)">Detalles de Facturacion</button> 
-            
-          </div>
-        
-        </div>
-        <mat-divider  *ngIf="!lastItem"></mat-divider>
-      </div>
-     
-      </ng-template>
-    </ngb-panel>
-   
-  </ngb-accordion>
-
-</div>
+        </ng-template>
+      </ngb-panel>
+    </ngb-accordion>
+  </div>
 </div>
 
 <!-- Este código de abajo borralo cuando se muestren bien los productos de arriba -->
-
 
 <!-- <div class="container mt-5 mb-5">
 
@@ -88,6 +135,3 @@
 
     </div>
   </div> -->
-
-
-
