--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -50,7 +50,7 @@
               >
                 <img
                   class="img-fluid img-responsive rounded product-image"
-                  src="https://i.imgur.com/HO8e9b8.jpg"
+                  [src]="product.imageUrl"
                 />
               </div>
               <div
@@ -70,7 +70,7 @@
 
               <div class="col-md-3 align-self-center">
                 <h3 class="font-weight-bold text-product">PRECIO</h3>
-                <p class="text-product">${{ product.price }}</p>
+                <p class="text-product">{{ product.price | currency }}</p>
               </div>
               <div
                 class="
