--- a/src/app/pages/eager/layout/container/layout.component.html
+++ b/src/app/pages/eager/layout/container/layout.component.html
@@ -29,7 +29,7 @@
     <!-- <auth-dialog></auth-dialog> -->
     <main class="app-main-wrapper">
       <loader *ngIf="navigating"></loader>
-      <router-outlet [hidden]="navigating" class="app-main-wrapper"></router-outlet>
+      <router-outlet class="app-main-wrapper"></router-outlet>
     </main>
     <!-- END Main -->
 
