--- a/src/app/pages/eager/products/products.component.html
+++ b/src/app/pages/eager/products/products.component.html
@@ -25,6 +25,7 @@
       </mat-card>
     </div>
     <div class="col-lg-11 col-md-10 col-sm-1">
+      <loader *ngIf="loading"></loader>
       <div class="gallery">
         <mat-card *ngFor="let product of filteredProducts">
           <div fxLayoutAlign="center">
