--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -33,12 +33,16 @@
           </h4>
           <!-- </div> -->
           <!-- <div class="d-flex justify-content-end"> -->
+            <button class="btn btn-primary" (click)="goToDetail(order)">
+              VER DETALLE
+            </button>
           <button
             ngbPanelToggle
             class="btn p-0 btn-link verDetalle justify-content-end"
           >
-            VER DETALLE&nbsp; &nbsp;<i class="fas fa-angle-down"></i>
+            VER PRODUCTOS&nbsp; &nbsp;<i class="fas fa-angle-down"></i>
           </button>
+        
           <!-- </div> -->
         </div>
       </ng-template>
@@ -90,9 +94,9 @@
                 mat-raised-button
                 color="primary"
                 type="button"
-                (click)="goToDetail(order)"
+                (click)="agregarAlCarrito(product)"
               >
-                Detalles de Facturacion
+                Agregar al Carrito
               </button>
             </div>
           </div>
